<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none" >

    <RelativeLayout
        android:id="@+id/tab_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg" >

        <ImageView
            android:id="@+id/imageView1"
            style="@style/LottoTheme.Styled.Layout.LottoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/title1" />

        <RelativeLayout
            style="@style/LottoTheme.Styled.Layout.Pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/RelativeLayout01" >

            <ImageView
                android:id="@+id/ImageView01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:src="@drawable/bottompaper" />

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/RelativeLayoutTicketContainer" />

            <RelativeLayout
                android:id="@+id/RelativeLayoutTicketContainer"
                style="@style/LottoTheme.Styled.Layout.Pager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:background="@drawable/app_background" >

                <LinearLayout
                    android:id="@+id/lottoWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/LottoCounterWrapper"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="23dp"
                    android:orientation="vertical" >
                </LinearLayout>

                <TextView
                    android:id="@+id/TextView01"
                    style="@style/LottoTheme.Styled.TextView.Title"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/string_tab_number_title"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <LinearLayout
                    android:id="@+id/LottoCounterWrapper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="20dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/TextView02"
                        style="@style/LottoTheme.Styled.TextView.LottoCounter"
                        android:text="@string/string_tab_number_buy"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/textViewCounter"
                        style="@style/LottoTheme.Styled.TextView.LottoCounter"
                        android:paddingLeft="3dp"
                        android:paddingRight="3dp"
                        android:text="0"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="45sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView3"
                        style="@style/LottoTheme.Styled.TextView.LottoCounter"
                        android:text="@string/string_tab_number_win"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/textViewWin"
                        style="@style/LottoTheme.Styled.TextView.LottoCounter"
                        android:paddingLeft="3dp"
                        android:paddingRight="3dp"
                        android:text="0"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="45sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/imageView1"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="10dp"
            android:text="Date"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#d20500"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/lottoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/selector_button_plus" />

        <RelativeLayout
            android:id="@+id/RelativeLayout01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lottoButton"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="44dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/lucky_number_bg" >

            <LinearLayout
                android:id="@+id/lottoTicket_number_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView2"
                    style="@style/LottoTheme.Styled.TextView.LottoNumber.Light"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/point" />

                <TextView
                    android:id="@+id/textView3"
                    style="@style/LottoTheme.Styled.TextView.LottoNumber.Light"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ImageView
                    android:id="@+id/ImageView02"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/point" />

                <TextView
                    android:id="@+id/textView4"
                    style="@style/LottoTheme.Styled.TextView.LottoNumber.Light"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ImageView
                    android:id="@+id/ImageView03"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/point" />

                <TextView
                    android:id="@+id/textView5"
                    style="@style/LottoTheme.Styled.TextView.LottoNumber.Light"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ImageView
                    android:id="@+id/ImageView04"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/point" />

                <TextView
                    android:id="@+id/textView6"
                    style="@style/LottoTheme.Styled.TextView.LottoNumber.Light"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ImageView
                    android:id="@+id/ImageView05"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/point" />

                <TextView
                    android:id="@+id/textView7"
                    style="@style/LottoTheme.Styled.TextView.LottoNumber.Light"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lottoTicket_number_special"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="13dp"
                android:orientation="horizontal" >

                <TextView
                    style="@style/LottoTheme.Styled.TextView.LottoNumber.Dark"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>